--- a/server/vercel.json
+++ b/server/vercel.json
@@ -7,10 +7,5 @@
       "use": "@vercel/node"
     }
   ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/"
-    }
-  ]
+  "routes": [{ "src": "/(.*)", "dest": "server/server.js" }]
 }
