--- a/server/vercel.json
+++ b/server/vercel.json
@@ -3,9 +3,14 @@
   "name": "Full Stack",
   "builds": [
     {
-      "src": "server/server.js",
+      "src": "./server.js",
       "use": "@vercel/node"
     }
   ],
-  "routes": [{ "src": "/(.*)", "dest": "server/server.js" }]
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
+  ]
 }
