--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,16 +1,16 @@
 {
   "version": 2,
-  "name": "Full Stack",
+  "name": "Backend",
   "builds": [
     {
-      "src": "./server.js",
+      "src": "server.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "/server.js"
     }
   ]
 }
